upload BG data by default

--- a/plugins/source/src/main/res/xml/pref_bgsource.xml
+++ b/plugins/source/src/main/res/xml/pref_bgsource.xml
@@ -8,7 +8,7 @@
         app:initialExpandedChildrenCount="0">
 
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="@string/key_do_ns_upload"
             android:title="@string/do_ns_upload_title" />
 
