use xdrip bg by default

--- a/plugins/source/src/main/res/xml/pref_randombg.xml
+++ b/plugins/source/src/main/res/xml/pref_randombg.xml
@@ -9,7 +9,7 @@
         android:title="Random BG">
 
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="@string/key_do_ns_upload"
             android:title="@string/do_ns_upload_title" />
 
