--- a/plugins/constraints/src/main/res/values-zh-rTW/exam.xml
+++ b/plugins/constraints/src/main/res/values-zh-rTW/exam.xml
@@ -159,9 +159,9 @@
     <string name="breadgrams_grams">估計和記錄攝入的碳水化合物時應僅使用克。</string>
     <string name="breadgrams_exchange">攝入的碳水化合物可以使用適當的交換系統記錄（例如DAFNE「CHO」交換或歐洲「麵包單位」）。</string>
     <string name="breadgrams_decay">AAPS使用動態模型來估計碳水化合物吸收並計算COB。</string>
-    <string name="breadgrams_calc">如果血糖水平超出可接受範圍（過低或過高），注射計算器可以用來提供碳水化合物或胰島素的修正建議。</string>
+    <string name="breadgrams_calc">如果血糖水平超出可接受範圍（過低或過高），注射計算機可以用來提供碳水化合物或胰島素的修正建議。</string>
     <string name="breadgrams_hint1">https://wiki.aaps.app/en/latest/Getting-Started/FAQ.html#insulin-to-carb-ratio-ic-g-u</string>
-    <string name="extendedcarbs_label">e-碳水化合物</string>
+    <string name="extendedcarbs_label">展延碳水化合物</string>
     <string name="extendedcarbs_handling">您可以使用e-碳水化合物（延長碳水化合物）做什麼？</string>
     <string name="extendedcarbs_future">計劃未來的碳水化合物攝入，可能分配在一個時間段內（類似於分配在一個時間段內的延長注射）。</string>
     <string name="extendedcarbs_free">記錄您想要隱藏在AAPS之外的「免費」運動碳水化合物。</string>
@@ -172,7 +172,7 @@
     <string name="nsclient_howcanyou">如何遠端監控AAPS（例如監控您的孩子）？</string>
     <string name="nsclient_nightscout">AAPSClient應用、Nightscout應用和Nightscout網頁都允許您遠端監控AAPS。</string>
     <string name="nsclient_dexcomfollow">其他應用（例如Dexcom follow、xDrip運行在跟隨模式下）允許您遠端跟踪某些參數（例如血糖/傳感器值），但使用不同的算法，因此可能會有不準確的IOB或COB值。</string>
-    <string name="nsclient_data">要遠端跟踪AAPS，兩個設備都必須有網絡連線（例如通過Wi-Fi或行動/蜂窩網絡資料）。</string>
+    <string name="nsclient_data">要遠端追踪AAPS，兩個設備都必須有網絡連線（例如通過Wi-Fi或行動網路）。</string>
     <string name="nsclient_fullcontrol">AAPSClient作為遠端跟隨者使用時，既可以監控也可以完全控制AAPS。</string>
     <string name="nsclient_hint1">https://wiki.aaps.app/en/latest/Children/Children.html</string>
     <string name="isf_label_exam">胰島素敏感因子 (ISF)</string>
