first try of AutoISF 3.0.1

--- a/core/keys/src/main/res/values/keys.xml
+++ b/core/keys/src/main/res/values/keys.xml
@@ -113,16 +113,18 @@
     <string name="key_half_basal_exercise_target" translatable="false">half_basal_exercise_target</string>
     <string name="key_openapsama_enable_autoISF" translatable="false">openapsama_enable_autoISF</string>
     <string name="key_enable_autoISF" translatable="false">openapsama_enable_autoISF</string>
-    <string name="key_enable_dura_ISF_with_COB" translatable="false">enable_dura_ISF_with_COB</string>
+    <!--<string name="key_enable_dura_ISF_with_COB" translatable="false">enable_dura_ISF_with_COB</string>-->
     <string name="key_openapsama_autoISF_max" translatable="false">autoISF_max</string>
     <string name="key_openapsama_autoISF_min" translatable="false">autoISF_min</string>
     <string name="key_openapsama_dura_ISF_weight" translatable="false">dura_ISF_weight</string>
     <string name="key_openapsama_lower_ISFrange_weight" translatable="false">lower_ISFrange_weight</string>
     <string name="key_openapsama_higher_ISFrange_weight" translatable="false">higher_ISFrange_weight</string>
-    <string name="key_openapsama_delta_ISFrange_weight" translatable="false">delta_ISFrange_weight</string>
+    <!--<string name="key_openapsama_delta_ISFrange_weight" translatable="false">delta_ISFrange_weight</string>-->
     <string name="key_openapsama_pp_ISF_weight" translatable="false">pp_ISF_weight</string>
+    <!--
     <string name="key_openapsama_pp_ISF_hours" translatable="false">pp_ISF_hours</string>
     <string name="key_enable_postprandial_ISF_always" translatable="false">enable_postprandial_ISF_always</string>
+    -->
     <string name="key_openapsama_bgAccel_ISF_weight" translatable="false">bgAccel_ISF_weight</string>
     <string name="key_openapsama_bgBrake_ISF_weight" translatable="false">bgBrake_ISF_weight</string>
     <string name="key_openapsama_smb_delivery_ratio" translatable="false">openapsama_smb_delivery_ratio</string>
@@ -130,7 +132,7 @@
     <string name="key_openapsama_smb_delivery_ratio_max" translatable="false">openapsama_smb_delivery_ratio_max</string>
     <string name="key_openapsama_smb_delivery_ratio_bg_range" translatable="false">openapsama_smb_delivery_ratio_bg_range</string>
     <string name="key_openapsama_smb_max_range_extension" translatable="false">openapsama_smb_max_range_extension</string>
-    <string name="key_enableSMB_EvenOn_OddOff" translatable="false">Enable alternative activation of SMB</string>
+    <!--<string name="key_enableSMB_EvenOn_OddOff" translatable="false">Enable alternative activation of SMB</string>-->
     <string name="key_enableSMB_EvenOn_OddOff_always" translatable="false">Enable alternative activation of SMB always</string>
     <string name="key_high_temptarget_raises_sensitivity" translatable="false">high_temptarget_raises_sensitivity</string>
     <string name="key_low_temptarget_lowers_sensitivity" translatable="false">low_temptarget_lowers_sensitivity</string>
